--- a/notebooks/Reporting.ipynb
+++ b/notebooks/Reporting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e5d91877",
    "metadata": {},
    "outputs": [],
@@ -28,88 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "145e4528",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                         property_id   report_reference  \\\n",
-      "0  LR NO 7996-98 STAGE STREET ROAD WEBUYE TOWNSHI...  SOO/DOO/5376/1/25   \n",
-      "1  doc39516020250128161012 TITLE NO NAIROBO-BLOCK...  SOO/DOO/5286/1/25   \n",
-      "2  PORTION NUMBER 1362 MALINDI CASUARINA AREA MAL...      SOO/5324/1/25   \n",
-      "3                            doc42268820251029132806  SOO/DOO/5383/1/25   \n",
-      "4  TITLE NO NJORO-NGATA BLOCK 2-5138 RVIST AREA O...   SOO/AM/5282/1/25   \n",
-      "\n",
-      "                          client_name                             valuer_name  \\\n",
-      "0                 Absa Bank Kenya PLC  Simon Oruka Orwa, Danish Onyango Orech   \n",
-      "1                    John P. N. Simba  Simon Oruka Orwa, Danish Onyango Orech   \n",
-      "2              KCB Bank Kenya Limited                        Simon Oruka Orwa   \n",
-      "3         Mission Aviation Fellowship  Simon Oruka Orwa, Danish Onyango Orech   \n",
-      "4  Co-operative Bank of Kenya Limited                        Simon Oruka Orwa   \n",
-      "\n",
-      "  inspection_date valuation_date location_county  \\\n",
-      "0      2025-07-17     2025-09-12         Bungoma   \n",
-      "1      2025-01-21     2025-01-28         Nairobi   \n",
-      "2      2025-06-11     2025-06-26          Kilifi   \n",
-      "3      2025-08-14     2025-09-26         Nairobi   \n",
-      "4      2025-01-18     2025-01-23          Nakuru   \n",
-      "\n",
-      "                                location_description  \\\n",
-      "0  The property is located along Stage Street Roa...   \n",
-      "1  House Number 158, is situated within Neumo New...   \n",
-      "2  The property is situated off Marine Park Road,...   \n",
-      "3  Office space on the second floor of Mission Av...   \n",
-      "4  The property is situated approximately 2 kilom...   \n",
-      "\n",
-      "         location_coordinates  plot_area_hectares  ...  \\\n",
-      "0   0°36'13.5\"N, 34°46'24.8\"E              0.1885  ...   \n",
-      "1                        None              0.0188  ...   \n",
-      "2  3°15'4.57\"S, 40° 7'43.98\"E              0.5500  ...   \n",
-      "3   1°19'09.6\"S, 36°49'02.9\"E              0.0000  ...   \n",
-      "4   0°16'51.7\"S, 35°59'59.1\"E              0.0465  ...   \n",
-      "\n",
-      "                  soil_type      gradient tenure_type  \\\n",
-      "0                  Red Soil  Gentle Slope   Leasehold   \n",
-      "1         Black Cotton Soil  Gentle Slope   Leasehold   \n",
-      "2  Mixed Soil - Sandy/Coral          Flat    Freehold   \n",
-      "3         Black Cotton Soil          Flat   Leasehold   \n",
-      "4        Grey Volcanic Soil  Gentle Slope    Freehold   \n",
-      "\n",
-      "                            registered_proprietor market_value_amount  \\\n",
-      "0                             Absa Bank Kenya PLC            35000000   \n",
-      "1                               Rose Murugi Maina            19000000   \n",
-      "2                      KICHUNA PROPERTIES LIMITED            65000000   \n",
-      "3                     Mission Aviation Fellowship                   0   \n",
-      "4  Kennedy Owuor Sila and Florence Anindo Onyango             4000000   \n",
-      "\n",
-      "                                            metadata  \\\n",
-      "0  {'ocr_used': True, 'timestamp': '2025-11-27T13...   \n",
-      "1  {'ocr_used': True, 'timestamp': '2025-11-25T10...   \n",
-      "2  {'ocr_used': True, 'timestamp': '2025-11-25T09...   \n",
-      "3  {'ocr_used': True, 'timestamp': '2025-11-27T13...   \n",
-      "4  {'ocr_used': True, 'timestamp': '2025-11-25T10...   \n",
-      "\n",
-      "                         created_at  \\\n",
-      "0  2025-11-27T10:14:41.878526+00:00   \n",
-      "1   2025-11-25T07:38:35.97975+00:00   \n",
-      "2  2025-11-25T06:41:19.132898+00:00   \n",
-      "3  2025-11-27T10:01:33.881292+00:00   \n",
-      "4   2025-11-25T07:03:03.41239+00:00   \n",
-      "\n",
-      "                               land_reg_number encumbrance_category  id  \n",
-      "0                                      7996/98        Unascertained  11  \n",
-      "1                         NAIROBI/BLOCK 32/888        Unascertained  33  \n",
-      "2  PORTION NUMBER 1362- MALINDI, KILIFI COUNTY                 None   4  \n",
-      "3                                        20703        Unascertained  62  \n",
-      "4                    NJORO/ NGATA BLOCK 2/5138        Unascertained   5  \n",
-      "\n",
-      "[5 rows x 23 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Extract data\n",
     "data = response.data\n",
@@ -122,157 +44,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a24ddbf9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 113 entries, 0 to 112\n",
-      "Data columns (total 23 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   property_id            113 non-null    object \n",
-      " 1   report_reference       113 non-null    object \n",
-      " 2   client_name            113 non-null    object \n",
-      " 3   valuer_name            113 non-null    object \n",
-      " 4   inspection_date        113 non-null    object \n",
-      " 5   valuation_date         113 non-null    object \n",
-      " 6   location_county        113 non-null    object \n",
-      " 7   location_description   113 non-null    object \n",
-      " 8   location_coordinates   112 non-null    object \n",
-      " 9   plot_area_hectares     113 non-null    float64\n",
-      " 10  plot_area_acres        113 non-null    float64\n",
-      " 11  land_use               113 non-null    object \n",
-      " 12  plot_shape             111 non-null    object \n",
-      " 13  soil_type              113 non-null    object \n",
-      " 14  gradient               106 non-null    object \n",
-      " 15  tenure_type            113 non-null    object \n",
-      " 16  registered_proprietor  113 non-null    object \n",
-      " 17  market_value_amount    113 non-null    int64  \n",
-      " 18  metadata               113 non-null    object \n",
-      " 19  created_at             113 non-null    object \n",
-      " 20  land_reg_number        113 non-null    object \n",
-      " 21  encumbrance_category   113 non-null    object \n",
-      " 22  id                     113 non-null    int64  \n",
-      "dtypes: float64(2), int64(2), object(19)\n",
-      "memory usage: 20.4+ KB\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(df.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5017076f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       plot_area_hectares  plot_area_acres  market_value_amount         id\n",
-      "count          113.000000       113.000000         1.130000e+02  113.00000\n",
-      "mean             2.441746         6.108420         1.085947e+08   57.00000\n",
-      "std              8.511049        21.173485         1.708102e+08   32.76431\n",
-      "min              0.000000         0.000000         0.000000e+00    1.00000\n",
-      "25%              0.039000         0.118600         1.600000e+07   29.00000\n",
-      "50%              0.103100         0.333100         5.000000e+07   57.00000\n",
-      "75%              0.381600         0.943000         1.100000e+08   85.00000\n",
-      "max             50.900000       127.300000         1.175000e+09  113.00000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(df.describe())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9f740870",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(113, 23)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a7d21692",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "property_id              0\n",
-       "report_reference         0\n",
-       "client_name              0\n",
-       "valuer_name              0\n",
-       "inspection_date          0\n",
-       "valuation_date           0\n",
-       "location_county          0\n",
-       "location_description     0\n",
-       "location_coordinates     1\n",
-       "plot_area_hectares       0\n",
-       "plot_area_acres          0\n",
-       "land_use                 0\n",
-       "plot_shape               2\n",
-       "soil_type                0\n",
-       "gradient                 7\n",
-       "tenure_type              0\n",
-       "registered_proprietor    0\n",
-       "market_value_amount      0\n",
-       "metadata                 0\n",
-       "created_at               0\n",
-       "land_reg_number          0\n",
-       "encumbrance_category     0\n",
-       "id                       0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "293d42bc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ All dependencies imported successfully\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "NW Realite - Property Valuation Analysis & AI Report Generator\n",
@@ -307,19 +122,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "407c582e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Configuration loaded for NW Realite\n",
-      " Report date: December 02, 2025\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Supabase Configuration\n",
@@ -341,21 +147,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "0f6e8e84",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Successfully fetched 113 records from Supabase\n",
-      "\n",
-      "Dataset Shape: (113, 23)\n",
-      "Columns: ['property_id', 'report_reference', 'client_name', 'valuer_name', 'inspection_date', 'valuation_date', 'location_county', 'location_description', 'location_coordinates', 'plot_area_hectares', 'plot_area_acres', 'land_use', 'plot_shape', 'soil_type', 'gradient', 'tenure_type', 'registered_proprietor', 'market_value_amount', 'metadata', 'created_at', 'land_reg_number', 'encumbrance_category', 'id']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fetch_valuation_data():\n",
     "    \"\"\"Fetch all property valuation data from Supabase\"\"\"\n",
@@ -381,23 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "de518961",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Data preparation complete\n",
-      "\n",
-      "New derived columns added:\n",
-      "- Time features: inspection_year, inspection_month, inspection_quarter\n",
-      "- Value metrics: value_per_acre, value_category\n",
-      "- Categories: land_size_category, client_type, has_encumbrance\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def prepare_data(df):\n",
     "    \"\"\"Clean and prepare data with derived features\"\"\"\n",
@@ -467,26 +249,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "bb206a63",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ All metrics calculated successfully\n",
-      "\n",
-      " METRICS SUMMARY:\n",
-      "Portfolio: 9 metrics\n",
-      "Temporal: 8 metrics\n",
-      "Clients: 5 metrics\n",
-      "Geographic: 5 metrics\n",
-      "Land Use: 3 metrics\n",
-      "Risk: 4 metrics\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def calculate_all_metrics(df):\n",
     "    \"\"\"Calculate comprehensive metrics for the report\"\"\"\n",
@@ -659,18 +425,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2d37111d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ Summary visualizations created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_summary_charts(df, metrics):\n",
     "    \"\"\"Create key visualizations for the report\"\"\"\n",
@@ -759,35 +517,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "cd6a79a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✓ AI report generated successfully\n",
-      "\n",
-      "================================================================================\n",
-      "AI-GENERATED REPORT PREVIEW (First 500 characters):\n",
-      "================================================================================\n",
-      "# NW REALITE\n",
-      "## Executive Property Valuation Report\n",
-      "**Date:** October 26, 2023\n",
-      "**Prepared For:** Stakeholders\n",
-      "**Prepared By:** Senior Property Valuation Analyst\n",
-      "\n",
-      "---\n",
-      "\n",
-      "# PAGE 1: EXECUTIVE SUMMARY\n",
-      "\n",
-      "## 1. Portfolio Overview\n",
-      "\n",
-      "NW Realite currently manages a robust valuation portfolio comprising 113 properties with a cumulative market value of KShs 12.27 billion. The average property value stands at KShs 108.6 million, though the median value of KShs 50 million indicates a significant skew, suggesting...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import google.generativeai as genai\n",
     "import json\n",
@@ -913,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "21dac93e",
    "metadata": {},
    "outputs": [],
@@ -1011,7 +744,9 @@
     "\n",
     "    # ===== BUILD PDF =====\n",
     "    doc.build(story)\n",
-    "    print(f\"✓ PDF report created: {filename}\")\n"
+    "    print(f\"✓ PDF report created: {filename}\")\n",
+    "\n",
+    "create_pdf_report()\n"
    ]
   }
  ],
