--- a/notebooks/Reporting.ipynb
+++ b/notebooks/Reporting.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "293d42bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ All dependencies imported successfully\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "NW Realite - Property Valuation Analysis & AI Report Generator\n",
@@ -40,10 +48,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "407c582e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Configuration loaded for NW Realite\n",
+      " Report date: December 02, 2025\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Supabase Configuration\n",
@@ -65,10 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "0f6e8e84",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Successfully fetched 113 records from Supabase\n",
+      "\n",
+      "Dataset Shape: (113, 23)\n",
+      "Columns: ['property_id', 'report_reference', 'client_name', 'valuer_name', 'inspection_date', 'valuation_date', 'location_county', 'location_description', 'location_coordinates', 'plot_area_hectares', 'plot_area_acres', 'land_use', 'plot_shape', 'soil_type', 'gradient', 'tenure_type', 'registered_proprietor', 'market_value_amount', 'metadata', 'created_at', 'land_reg_number', 'encumbrance_category', 'id']\n"
+     ]
+    }
+   ],
    "source": [
     "def fetch_valuation_data():\n",
     "    \"\"\"Fetch all property valuation data from Supabase\"\"\"\n",
@@ -94,10 +122,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "de518961",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Data preparation complete\n",
+      "\n",
+      "New derived columns added:\n",
+      "- Time features: inspection_year, inspection_month, inspection_quarter\n",
+      "- Value metrics: value_per_acre, value_category\n",
+      "- Categories: land_size_category, client_type, has_encumbrance\n"
+     ]
+    }
+   ],
    "source": [
     "def prepare_data(df):\n",
     "    \"\"\"Clean and prepare data with derived features\"\"\"\n",
@@ -167,10 +208,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "bb206a63",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ All metrics calculated successfully\n",
+      "\n",
+      " METRICS SUMMARY:\n",
+      "Portfolio: 9 metrics\n",
+      "Temporal: 8 metrics\n",
+      "Clients: 5 metrics\n",
+      "Geographic: 5 metrics\n",
+      "Land Use: 3 metrics\n",
+      "Risk: 4 metrics\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_all_metrics(df):\n",
     "    \"\"\"Calculate comprehensive metrics for the report\"\"\"\n",
@@ -343,10 +400,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "2d37111d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Summary visualizations created\n"
+     ]
+    }
+   ],
    "source": [
     "def create_summary_charts(df, metrics):\n",
     "    \"\"\"Create key visualizations for the report\"\"\"\n",
@@ -435,10 +500,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "cd6a79a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ AI report generated successfully\n",
+      "\n",
+      "================================================================================\n",
+      "AI-GENERATED REPORT PREVIEW (First 500 characters):\n",
+      "================================================================================\n",
+      "# EXECUTIVE REPORT: PROPERTY VALUATION PORTFOLIO ANALYSIS\n",
+      "\n",
+      "**Date:** October 26, 2023\n",
+      "**To:** NW Realite Stakeholders\n",
+      "**From:** Senior Property Valuation Analyst\n",
+      "**Subject:** Comprehensive Valuation Portfolio Performance Review\n",
+      "\n",
+      "---\n",
+      "\n",
+      "# PAGE 1: EXECUTIVE SUMMARY\n",
+      "\n",
+      "## 1. Portfolio Overview\n",
+      "\n",
+      "NW Realite's valuation portfolio currently comprises 113 properties, boasting a substantial total market value of KShs 12,271,200,000. These properties span a significant total land area of 690.25 acres. While t...\n"
+     ]
+    }
+   ],
    "source": [
     "import google.generativeai as genai\n",
     "import json\n",
@@ -564,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "21dac93e",
    "metadata": {},
    "outputs": [],
@@ -663,8 +754,51 @@
     "    # ===== BUILD PDF =====\n",
     "    doc.build(story)\n",
     "    print(f\"✓ PDF report created: {filename}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "5f413d23",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating PDF report...\n",
+      "✓ PDF report created: nw_realite_report.pdf\n",
+      "✓ PDF report created successfully: nw_realite_report.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ensure df, metrics, ai_report, and chart_buffer exist\n",
+    "if 'df' not in globals() or df is None:\n",
+    "    raise ValueError(\"Dataframe 'df' is missing.\")\n",
     "\n",
-    "create_pdf_report()\n"
+    "if 'metrics' not in globals():\n",
+    "    raise ValueError(\"Metrics object is missing.\")\n",
+    "\n",
+    "if 'ai_report' not in globals() or ai_report is None:\n",
+    "    raise ValueError(\"AI report missing. Run generate_ai_report() first.\")\n",
+    "\n",
+    "if 'chart_buffer' not in globals():\n",
+    "    raise ValueError(\"Chart buffer missing. Generate chart first.\")\n",
+    "\n",
+    "output_path = \"nw_realite_report.pdf\"\n",
+    "\n",
+    "print(\"Generating PDF report...\")\n",
+    "\n",
+    "create_pdf_report(\n",
+    "    metrics=metrics,\n",
+    "    ai_report=ai_report,\n",
+    "    chart_buffer=chart_buffer,\n",
+    "    filename=output_path\n",
+    ")\n",
+    "\n",
+    "print(f\"✓ PDF report created successfully: {output_path}\")\n"
    ]
   }
  ],
