--- a/notebooks/Reporting.ipynb
+++ b/notebooks/Reporting.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "id": "2d37111d",
    "metadata": {},
    "outputs": [
@@ -421,7 +421,7 @@
     "    sns.set_palette(\"Set2\")\n",
     "    \n",
     "    # Create figure with 6 subplots\n",
-    "    fig, axes = plt.subplots(2, 3, figsize=(18, 10))\n",
+    "    fig, axes = plt.subplots(2, 3, figsize=(24, 10))\n",
     "    fig.suptitle('NW Realite - Property Valuation Dashboard', fontsize=16, fontweight='bold', y=0.995)\n",
     "    \n",
     "    # 1. Top 10 Counties by Value\n",
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "cd6a79a4",
    "metadata": {},
    "outputs": [
@@ -513,12 +513,10 @@
       "================================================================================\n",
       "AI-GENERATED REPORT PREVIEW (First 500 characters):\n",
       "================================================================================\n",
-      "# EXECUTIVE REPORT: PROPERTY VALUATION PORTFOLIO ANALYSIS\n",
-      "\n",
-      "**Date:** October 26, 2023\n",
-      "**To:** NW Realite Stakeholders\n",
-      "**From:** Senior Property Valuation Analyst\n",
-      "**Subject:** Comprehensive Valuation Portfolio Performance Review\n",
+      "**TO:** NW Realite Stakeholders\n",
+      "**FROM:** Samuel Wanyua, Data Scientist\n",
+      "**DATE:** 2nd December 2025\n",
+      "**SUBJECT:** Comprehensive Property Valuation Portfolio Performance Report\n",
       "\n",
       "---\n",
       "\n",
@@ -526,7 +524,7 @@
       "\n",
       "## 1. Portfolio Overview\n",
       "\n",
-      "NW Realite's valuation portfolio currently comprises 113 properties, boasting a substantial total market value of KShs 12,271,200,000. These properties span a significant total land area of 690.25 acres. While t...\n"
+      "NW Realite's property valuation portfolio currently comprises 113 properties, accumulating a substantial total market value of KShs 12.27 billion as of the reporting date. This represents a significant asset base under our assessment. The average property value st...\n"
      ]
     }
    ],
@@ -591,39 +589,39 @@
     "    \"\"\"\n",
     "\n",
     "    prompt = f\"\"\"\n",
-    "You are a senior property valuation analyst at NW Realite. Based on the comprehensive data summary below, \n",
-    "create a detailed 2-page executive report for stakeholders.\n",
+    "You are a Data Scientist (Samuel Wanyua) at NW Realite. Based on the comprehensive data summary below, \n",
+    "create a detailed 2-page executive report for stakeholders. (Date is 2nd December 2025)\n",
     "\n",
     "{metrics_summary}\n",
     "\n",
     "The report should be structured as follows:\n",
     "\n",
-    "# PAGE 1: EXECUTIVE SUMMARY\n",
+    "EXECUTIVE SUMMARY\n",
     "\n",
-    "## 1. Portfolio Overview (2-3 paragraphs)\n",
+    " 1. Portfolio Overview (2-3 paragraphs)\n",
     "Provide a high-level summary of the portfolio including size, total value, and key characteristics.\n",
     "\n",
-    "## 2. Key Performance Indicators (bullet points)\n",
+    " 2. Key Performance Indicators (bullet points)\n",
     "Highlight the most critical metrics in an easy-to-scan format.\n",
     "\n",
-    "## 3. Growth & Trends Analysis (1-2 paragraphs)\n",
+    " 3. Growth & Trends Analysis (1-2 paragraphs)\n",
     "Analyze growth trends, seasonal patterns, and inspection efficiency.\n",
     "\n",
-    "## 4. Client & Geographic Insights (1-2 paragraphs)\n",
+    " 4. Client & Geographic Insights (1-2 paragraphs)\n",
     "Discuss client concentration, diversification, and geographic distribution.\n",
     "\n",
-    "# PAGE 2: DETAILED ANALYSIS & RECOMMENDATIONS\n",
+    "# DETAILED ANALYSIS & RECOMMENDATIONS\n",
     "\n",
-    "## 5. Risk Assessment (2 paragraphs)\n",
+    " 5. Risk Assessment (2 paragraphs)\n",
     "Analyze encumbrance levels, value at risk, and portfolio risk profile.\n",
     "\n",
-    "## 6. Land Use & Value Analysis (1-2 paragraphs)\n",
+    " 6. Land Use & Value Analysis (1-2 paragraphs)\n",
     "Discuss land use distribution, value per acre trends, and property characteristics.\n",
     "\n",
-    "## 7. Strategic Recommendations (5–7 bullet points)\n",
+    " 7. Strategic Recommendations (5–7 bullet points)\n",
     "Provide actionable recommendations for portfolio management, risk mitigation, and growth opportunities.\n",
     "\n",
-    "## 8. Key Takeaways (3–5 bullet points)\n",
+    " 8. Key Takeaways (3–5 bullet points)\n",
     "Summarize the most important insights for quick reference.\n",
     "\n",
     "Use professional language, be data-driven, and provide specific, actionable insights. \n",
@@ -655,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 46,
    "id": "21dac93e",
    "metadata": {},
    "outputs": [],
@@ -678,19 +676,19 @@
     "    # Custom Styles\n",
     "    title_style = ParagraphStyle(\n",
     "        'CustomTitle', parent=styles['Title'],\n",
-    "        fontSize=24, textColor=colors.HexColor('#1a4d80'),\n",
+    "        fontSize=24, textColor=colors.HexColor(\"#000000\"),\n",
     "        spaceAfter=12, alignment=TA_CENTER\n",
     "    )\n",
     "\n",
     "    heading_style = ParagraphStyle(\n",
     "        'CustomHeading', parent=styles['Heading1'],\n",
-    "        fontSize=14, textColor=colors.HexColor('#1a4d80'),\n",
+    "        fontSize=14, textColor=colors.HexColor(\"#000000\"),\n",
     "        spaceAfter=10, spaceBefore=15, fontName='Helvetica-Bold'\n",
     "    )\n",
     "\n",
     "    subheading_style = ParagraphStyle(\n",
     "        'CustomSubHeading', parent=styles['Heading2'],\n",
-    "        fontSize=12, textColor=colors.HexColor('#2c5f8d'),\n",
+    "        fontSize=12, textColor=colors.HexColor(\"#000000\"),\n",
     "        spaceAfter=8, spaceBefore=10, fontName='Helvetica-Bold'\n",
     "    )\n",
     "\n",
@@ -705,7 +703,7 @@
     "    story.append(Spacer(1, 0.2*inch))\n",
     "    story.append(Paragraph(\"Property Valuation Analysis Report\", heading_style))\n",
     "    story.append(Spacer(1, 0.1*inch))\n",
-    "    story.append(Paragraph(f\"Report Date: {REPORT_DATE}\", body_style))\n",
+    "    # story.append(Paragraph(f\"Report Date: {REPORT_DATE}\", body_style))\n",
     "    story.append(Spacer(1, 0.3*inch))\n",
     "\n",
     "    # ===== KEY METRICS TABLE =====\n",
@@ -724,7 +722,7 @@
     "\n",
     "    key_metrics_table = Table(key_metrics_data, colWidths=[3.5*inch, 2.5*inch])\n",
     "    key_metrics_table.setStyle(TableStyle([\n",
-    "        ('BACKGROUND', (0, 0), (-1, 0), colors.HexColor('#1a4d80')),\n",
+    "        ('BACKGROUND', (0, 0), (-1, 0), colors.HexColor(\"#0c0c0c\")),\n",
     "        ('TEXTCOLOR', (0, 0), (-1, 0), colors.whitesmoke),\n",
     "        ('ALIGN', (0, 0), (-1, -1), 'LEFT'),\n",
     "        ('FONTNAME', (0, 0), (-1, 0), 'Helvetica-Bold'),\n",
@@ -739,7 +737,7 @@
     "    story.append(Spacer(1, 0.4*inch))\n",
     "\n",
     "    # ===== AI-GENERATED REPORT TEXT =====\n",
-    "    story.append(Paragraph(\"AI Analysis & Insights\", heading_style))\n",
+    "    story.append(Paragraph(\"Analysis & Insights\", heading_style))\n",
     "    for paragraph in ai_report.split(\"\\n\"):\n",
     "        if paragraph.strip():\n",
     "            story.append(Paragraph(paragraph, body_style))\n",
@@ -759,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "5f413d23",
    "metadata": {},
    "outputs": [
